--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="#" class="btn">Resume</a>
         </div>
         <div class="home-img">
-            <img src="rjs.jpeg" alt="">
+            <img src="code.webp" alt="">
         </div>
     </section>
     <!-- About me -->
@@ -68,24 +68,22 @@
             <div class="skill-box">
                 <i class='bx bxl-dev-to' ></i>
                 <h3>Frontend Developer</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Corporis nesciunt asperiores, tempora odio quae voluptate. Fugiat praesentium id odit possimus?</p>
+                <p>An upcoming front-end devoloper with basic knowledge in UI-UX designing.
+                Would learn and work more in future. Will do front-end more creatively.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="skill-box">
                 <i class='bx bx-code-alt' ></i>
                 <h3>Competitive Coder</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Corporis nesciunt asperiores, tempora odio quae voluptate. Fugiat praesentium id odit possimus?</p>
+                <p>Will do competetive codings in Python.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="skill-box">
                 <i class='bx bxs-data'></i>
                 <h3>Backend Developer</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Corporis nesciunt asperiores, tempora odio quae voluptate. Fugiat praesentium id odit possimus?</p>
+                <p>An budding backend developer with with more knowledge in backend development.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
         
@@ -100,8 +98,7 @@
                 <img src="img/pro-1.jpg" alt="project">
                 <div class="portfolio-layer">
                     <h4>To Do List</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, fugiat!</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <p>A Basic to-do-list site with html and css.</p>
                 </div>
             </div>
 
@@ -109,8 +106,7 @@
                 <img src="img/pro-1.jpg" alt="project">
                 <div class="portfolio-layer">
                     <h4>Mini Gpt</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, fugiat!</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <p>Mini gpt with html,css and js. In addition with voice assistant.</p>
                 </div>
             </div>
 
@@ -118,8 +114,7 @@
                 <img src="img/pro-1.jpg" alt="project">
                 <div class="portfolio-layer">
                     <h4>Amazon Clone</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, fugiat!</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <p>A simple clone of Amazon application.</p>
                 </div>
             </div>
 
@@ -127,8 +122,7 @@
                 <img src="img/pro-1.jpg" alt="project">
                 <div class="portfolio-layer">
                     <h4>Note Pad</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, fugiat!</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <p>Notepad app using html and css.</p>      
                 </div>
             </div>
             
@@ -136,8 +130,7 @@
                 <img src="img/pro-1.jpg" alt="project">
                 <div class="portfolio-layer">
                     <h4>Login Page</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, fugiat!</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <p>A responsive login page using html, css and js.</p>
                 </div>
             </div>
 
@@ -145,8 +138,7 @@
                 <img src="img/pro-1.jpg" alt="project">
                 <div class="portfolio-layer">
                     <h4>Voice Recogonition</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, fugiat!</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <p>A responsive voice recognition site using html,css and js</p>
                 </div>
             </div>
 
