--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="portfolio-container">
 
             <div class="portfolio-box">
-                <img src="img/pro-1.jpg" alt="project">
+                <img src="to do list.png" alt="project">
                 <div class="portfolio-layer">
                     <h4>To Do List</h4>
                     <p>A Basic to-do-list site with html and css.</p>
