--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="img/pro-1.jpg" alt="project">
+                <img src="gpt.png" alt="project">
                 <div class="portfolio-layer">
                     <h4>Mini Gpt</h4>
                     <p>Mini gpt with html,css and js. In addition with voice assistant.</p>
