--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="img/pro-1.jpg" alt="project">
+                <img src="amazon clone.webp" alt="project">
                 <div class="portfolio-layer">
                     <h4>Amazon Clone</h4>
                     <p>A simple clone of Amazon application.</p>
