--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="img/pro-1.jpg" alt="project">
+                <img src="notepad.webp" alt="project">
                 <div class="portfolio-layer">
                     <h4>Note Pad</h4>
                     <p>Notepad app using html and css.</p>      
@@ -127,7 +127,7 @@
             </div>
             
             <div class="portfolio-box">
-                <img src="img/pro-1.jpg" alt="project">
+                <img src="login.webp" alt="project">
                 <div class="portfolio-layer">
                     <h4>Login Page</h4>
                     <p>A responsive login page using html, css and js.</p>
@@ -135,7 +135,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="img/pro-1.jpg" alt="project">
+                <img src="voice.jpeg" alt="project">
                 <div class="portfolio-layer">
                     <h4>Voice Recogonition</h4>
                     <p>A responsive voice recognition site using html,css and js</p>
